<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8eeff"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="168dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tcelogo"
        tools:layout_conversion_absoluteHeight="273dp"
        tools:layout_conversion_absoluteWidth="199dp" />

    <TextView
        android:id="@+id/textViewCollegeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:textColor="#007BFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/textViewCollegeName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department_name"
        android:textColor="#007BFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <Switch
        android:id="@+id/switchLoginMode"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:text="@string/switch_admin_mode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:backgroundTint="#C82121"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4C4C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:backgroundTint="#C82121"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#4C4C4C"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        app:layout_constraintWidth_percent="0.9"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:background="#007BFF"
        android:text="@string/button_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an Account? Register here"
        android:textColor="#4C4C4C"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:clickable="true"
        android:focusable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>
